--- a/IndoorPositioning.UI/Components/GatewaysScreen.xaml
+++ b/IndoorPositioning.UI/Components/GatewaysScreen.xaml
@@ -52,8 +52,15 @@
                 
                 <local:MapComponent Grid.Row="1" />
 
-                <Button Grid.Row="2" x:Name="btnUpdate" HorizontalAlignment="Right" Content="Update"
-                        Click="btnUpdate_Click"/>
+                <Grid Grid.Row="2" HorizontalAlignment="Right">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Button Grid.Column="0" x:Name="btnUpdate" Content="Update" Click="btnUpdate_Click"/>
+                    <Button Grid.Column="1" x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" />
+                </Grid>
             </Grid>
         </Grid>
 
