--- a/IndoorPositioning.UI/App.xaml
+++ b/IndoorPositioning.UI/App.xaml
@@ -16,6 +16,7 @@
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="20" />
             <Setter Property="Padding" Value="10" />
+            <Setter Property="Margin" Value="5" />
         </Style>
 
         <Style TargetType="TextBlock">
