--- a/IndoorPositioning.UI/App.xaml
+++ b/IndoorPositioning.UI/App.xaml
@@ -1,16 +1,26 @@
 ﻿<Application x:Class="IndoorPositioning.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <!--Arrays-->
+        <x:Array x:Key="Combobox_Gateway_Axis_Values" Type="sys:String">
+            <sys:String>0</sys:String>
+            <sys:String>N</sys:String>
+            <sys:String>N/2</sys:String>
+        </x:Array>
 
+        <!--Styles-->
         <Style TargetType="Menu">
             <Setter Property="FontSize" Value="20" />
+            <Setter Property="Margin" Value="5" />
         </Style>
 
         <Style TargetType="ComboBox">
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="FontSize" Value="20" />
+            <Setter Property="Margin" Value="5" />
         </Style>
 
         <Style TargetType="Button">
@@ -23,10 +33,12 @@
             <Setter Property="HorizontalAlignment" Value="Left" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="FontSize" Value="20" />
+            <Setter Property="Margin" Value="5" />
         </Style>
 
         <Style TargetType="TextBox">
             <Setter Property="FontSize" Value="20" />
+            <Setter Property="Margin" Value="5" />
         </Style>
 
     </Application.Resources>
