--- a/IndoorPositioning.UI/Components/MapScreen.xaml
+++ b/IndoorPositioning.UI/Components/MapScreen.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:IndoorPositioning.UI.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="10">
@@ -29,6 +28,6 @@
             </Grid>
         </Grid>
 
-        <local:MapComponent Grid.Row="1" />
+        <Canvas Grid.Row="1" />
     </Grid>
 </UserControl>
