--- a/IndoorPositioning.UI/Components/EnvironmentsScreen.xaml
+++ b/IndoorPositioning.UI/Components/EnvironmentsScreen.xaml
@@ -3,10 +3,77 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:IndoorPositioning.UI.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Text="Environments" Style="{StaticResource HeaderTextBlock}" />
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            <ListView Grid.Column="0" x:Name="lstEnvironments"
+                      SelectionChanged="lstEnvironments_SelectionChanged">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <Grid Grid.Column="1" Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0" x:Name="gridEnvironmentDetails">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Name: " />
+                    <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="txtName" Text="{Binding Name, Mode=TwoWay}" />
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Creation Time: " />
+                    <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Timestamp}" />
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Width: " />
+                    <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Width}" x:Name="txtWidth" TextAlignment="Right" PreviewTextInput="txt_PreviewTextInput" />
+                    <TextBlock Grid.Row="2" Grid.Column="2" Text=" cm" />
+                    <TextBlock Grid.Row="3" Grid.Column="0" Text="Height: " />
+                    <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Height}" x:Name="txtHeight" TextAlignment="Right" PreviewTextInput="txt_PreviewTextInput" />
+                    <TextBlock Grid.Row="3" Grid.Column="2" Text=" cm" />
+                </Grid>
+
+                <TextBlock Grid.Row="1" Text="Preview: " />
+                
+                <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                    <Canvas Grid.Row="2" x:Name="canvasEnvironmentPreview" Background="LightGray" />
+                </ScrollViewer>
+                
+                <Grid Grid.Row="3" HorizontalAlignment="Right">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Button Grid.Column="0" x:Name="btnAdd" Content="Add" Click="btnAdd_Click" />
+                    <Button Grid.Column="1" x:Name="btnUpdate" Content="Update" Click="btnUpdate_Click"/>
+                    <Button Grid.Column="2" x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" />
+                </Grid>
+            </Grid>
+        </Grid>
     </Grid>
 </UserControl>
