--- a/IndoorPositioning.UI/Components/GatewaysScreen.xaml
+++ b/IndoorPositioning.UI/Components/GatewaysScreen.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="Gateways" FontSize="30" />
+        <TextBlock Grid.Row="0" Text="Gateways" Style="{StaticResource HeaderTextBlock}" />
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -48,11 +48,11 @@
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Gateway Name: " />
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Name: " />
                     <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name, Mode=TwoWay}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Gateway MAC Address: " />
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="MAC Address: " />
                     <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding MACAddress}" />
-                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Gateway Last Signal Time: " />
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Last Signal Time: " />
                     <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding LastSignalTimestamp}" />
 
                     <Grid Grid.Row="3" Grid.ColumnSpan="2">
