--- a/IndoorPositioning.UI/Components/EnvironmentsScreen.xaml
+++ b/IndoorPositioning.UI/Components/EnvironmentsScreen.xaml
@@ -2,10 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:visualitems="clr-namespace:IndoorPositioning.UI.VisualItems"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             SizeChanged="UserControl_SizeChanged">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -26,15 +26,16 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Grid Grid.Column="1" Margin="10">
+            <Grid Grid.Column="1" Margin="10" x:Name="gridEnvironmentDetails">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0" x:Name="gridEnvironmentDetails">
+                <Grid Grid.Row="0">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
@@ -51,22 +52,31 @@
                     <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Timestamp}" />
                     <TextBlock Grid.Row="2" Grid.Column="0" Text="Width: " />
                     <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Width, Mode=TwoWay}" x:Name="txtWidth" 
-                             TextAlignment="Right" PreviewTextInput="txt_PreviewTextInput" TextChanged="txtHeightOrWidth_TextChanged" />
+                             TextAlignment="Right" PreviewTextInput="txtOnlyNumber_PreviewTextInput" 
+                             TextChanged="txtHeightOrWidth_TextChanged" />
                     <TextBlock Grid.Row="2" Grid.Column="2" Text=" cm" />
                     <TextBlock Grid.Row="3" Grid.Column="0" Text="Height: " />
-                    <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Height, Mode=TwoWay}" x:Name="txtHeight" 
-                             TextAlignment="Right" PreviewTextInput="txt_PreviewTextInput" TextChanged="txtHeightOrWidth_TextChanged" />
+                    <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Height, Mode=TwoWay}" 
+                             x:Name="txtHeight" TextAlignment="Right" 
+                             PreviewTextInput="txtOnlyNumber_PreviewTextInput" 
+                             TextChanged="txtHeightOrWidth_TextChanged" />
                     <TextBlock Grid.Row="3" Grid.Column="2" Text=" cm" />
+                    <TextBlock Grid.Row="4" Grid.Column="0" Text="Distance btw Ref Points: " />
+                    <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding DistanceBetweenReferencePoints, Mode=TwoWay}" 
+                             x:Name="txtDistanceBetweenRefPoints" TextAlignment="Right" 
+                             PreviewTextInput="txtOnlyNumber_PreviewTextInput" />
+                    <TextBlock Grid.Row="4" Grid.Column="2" Text=" cm" />
                 </Grid>
 
                 <TextBlock Grid.Row="1" Text="Preview: " />
 
                 <Grid Grid.Row="2" x:Name="gridCanvas">
-                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                        <Canvas x:Name="canvasEnvironmentPreview" Background="LightGray" />
-                    </ScrollViewer>
+                    <visualitems:EnvironmentShape x:Name="environmentShape"
+                                                  EnvironmentHeight="{Binding Text, ElementName=txtHeight}"
+                                                  EnvironmentWidth="{Binding Text, ElementName=txtWidth}"
+                                                  DistanceBetweenReferencePoints="{Binding Text, ElementName=txtDistanceBetweenRefPoints}"/>
                 </Grid>
-                
+
                 <Grid Grid.Row="3" HorizontalAlignment="Right">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
