--- a/IndoorPositioning.UI/VisualItems/GatewayShape.xaml
+++ b/IndoorPositioning.UI/VisualItems/GatewayShape.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
+             Height="10" Width="10"
              d:DesignHeight="10" d:DesignWidth="10">
     <Ellipse Fill="Blue" />
 </UserControl>
