MapScreen to be continued and the package name of components changed into screens

--- a/IndoorPositioning.UI/MainWindow.xaml
+++ b/IndoorPositioning.UI/MainWindow.xaml
@@ -8,7 +8,7 @@
     <Grid>
         <DockPanel LastChildFill="True">
             <Menu DockPanel.Dock="Top" x:Name="menu">
-                <MenuItem Header="Map" x:Name="mnItemMap" />
+                <MenuItem Header="Map" x:Name="mnItemMap" Click="mnItemMap_Click" />
                 <MenuItem Header="Gateways" x:Name="mnItemGateways" Click="mnItemGateways_Click" />
                 <MenuItem Header="Beacons" x:Name="mnItemBeacons" Click="mnItemBeacons_Click" />
                 <MenuItem Header="Environments" x:Name="mnItemEnvironments" Click="mnItemEnvironments_Click" />
