--- a/IndoorPositioning.UI/Screens/FingerprintingScreen.xaml
+++ b/IndoorPositioning.UI/Screens/FingerprintingScreen.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="IndoorPositioning.UI.Components.FingerprintingScreen"
+﻿<UserControl x:Class="IndoorPositioning.UI.Screens.FingerprintingScreen"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:IndoorPositioning.UI.Components"
+             xmlns:local="clr-namespace:IndoorPositioning.UI.Screens"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
