--- a/IndoorPositioning.UI/Screens/GatewaysScreen.xaml
+++ b/IndoorPositioning.UI/Screens/GatewaysScreen.xaml
@@ -1,24 +1,29 @@
-﻿<UserControl x:Class="IndoorPositioning.UI.Components.BeaconsScreen"
+﻿<UserControl x:Class="IndoorPositioning.UI.Screens.GatewaysScreen"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:converters="clr-namespace:IndoorPositioning.UI.Converters"
+             xmlns:visualitems="clr-namespace:IndoorPositioning.UI.VisualItems"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <converters:GatewayPositionToCanvasCoordinateConverter x:Key="GatewayPositionToCanvasCoordinateConverter" />
+    </UserControl.Resources>
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="Beacons" Style="{StaticResource HeaderTextBlock}" />
+        <TextBlock Grid.Row="0" Text="Gateways" Style="{StaticResource HeaderTextBlock}" />
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
-            <ListView Grid.Column="0" x:Name="lstBeacons"
-                      SelectionChanged="lstBeacons_SelectionChanged">
+            <ListView Grid.Column="0" x:Name="lstGateways"
+                      SelectionChanged="lstGateways_SelectionChanged">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Name}" />
@@ -28,12 +33,12 @@
             <Grid Grid.Column="1" Margin="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0" x:Name="gridBeaconDetails">
+                <Grid Grid.Row="0" x:Name="gridGatewayDetails">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
@@ -49,22 +54,40 @@
                     <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding MACAddress}" />
                     <TextBlock Grid.Row="2" Grid.Column="0" Text="Last Signal Time: " />
                     <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding LastSignalTimestamp}" />
-                    <TextBlock Grid.Row="3" Grid.Column="0" Text="Type: " />
-                    <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding BeaconType, Mode=TwoWay}" />
-                    <TextBlock Grid.Row="4" Grid.Column="0" Text="Last Rssi: " />
-                    <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding LastRssi}" />
+
+                    <Grid Grid.Row="3" Grid.ColumnSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="X-Axis: " />
+                        <ComboBox Grid.Column="1" x:Name="cbXaxis" 
+                                  ItemsSource="{StaticResource Combobox_Gateway_Axis_Values}"
+                                  SelectedValue="{Binding Xaxis, Mode=TwoWay}" />
+                        <TextBlock Grid.Column="2" Text="Y-Axis: " />
+                        <ComboBox Grid.Column="3" x:Name="cbYaxis" 
+                                  ItemsSource="{StaticResource Combobox_Gateway_Axis_Values}"
+                                  SelectedValue="{Binding Yaxis, Mode=TwoWay}" />
+
+                    </Grid>
                 </Grid>
 
-                <Grid Grid.Row="2" HorizontalAlignment="Right">
+                <TextBlock Grid.Row="1" Text="Gateway Position: " />
+                <Canvas Grid.Row="2" x:Name="canvasGatewayPosition" Background="LightGray" />
+
+                <Grid Grid.Row="3" HorizontalAlignment="Right">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" x:Name="btnUpdate" Content="Update" Click="btnUpdate_Click" />
+                    <Button Grid.Column="0" x:Name="btnUpdate" Content="Update" Click="btnUpdate_Click"/>
                     <Button Grid.Column="1" x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" />
                 </Grid>
             </Grid>
         </Grid>
+
     </Grid>
 </UserControl>
