--- a/IndoorPositioning.UI/Screens/BeaconsScreen.xaml
+++ b/IndoorPositioning.UI/Screens/BeaconsScreen.xaml
@@ -17,6 +17,10 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
             <ListView Grid.Column="0" x:Name="lstBeacons"
                       SelectionChanged="lstBeacons_SelectionChanged">
                 <ListView.ItemTemplate>
@@ -25,11 +29,11 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+            <Button Grid.Row="1" Grid.Column="0" Content="Clear All Beacons" Click="btnClearAllBeacons_Click" />
             <Grid Grid.Column="1" Margin="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0" x:Name="gridBeaconDetails">
                     <Grid.RowDefinitions>
@@ -54,16 +58,15 @@
                     <TextBlock Grid.Row="4" Grid.Column="0" Text="Last Rssi: " />
                     <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding LastRssi}" />
                 </Grid>
+            </Grid>
+            <Grid Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
 
-                <Grid Grid.Row="2" HorizontalAlignment="Right">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
-                    </Grid.ColumnDefinitions>
-
-                    <Button Grid.Column="0" x:Name="btnUpdate" Content="Update" Click="btnUpdate_Click" />
-                    <Button Grid.Column="1" x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" />
-                </Grid>
+                <Button Grid.Column="0" x:Name="btnUpdate" Content="Update" Click="btnUpdate_Click" />
+                <Button Grid.Column="1" x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" />
             </Grid>
         </Grid>
     </Grid>
