--- a/IndoorPositioning.UI/Screens/EnvironmentsScreen.xaml
+++ b/IndoorPositioning.UI/Screens/EnvironmentsScreen.xaml
@@ -26,58 +26,65 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Grid Grid.Column="1" Margin="10" x:Name="gridEnvironmentDetails">
+            <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0">
+
+                <Grid Grid.Row="0" Margin="10" x:Name="gridEnvironmentDetails">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="auto" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Name: " />
-                    <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="txtName" Text="{Binding Name, Mode=TwoWay}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Creation Time: " />
-                    <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Timestamp}" />
-                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Width: " />
-                    <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Width, Mode=TwoWay}" x:Name="txtWidth" 
+                    <Grid Grid.Row="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="Name: " />
+                        <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="txtName" Text="{Binding Name, Mode=TwoWay}" />
+                        <TextBlock Grid.Row="1" Grid.Column="0" Text="Creation Time: " />
+                        <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Timestamp}" />
+                        <TextBlock Grid.Row="2" Grid.Column="0" Text="Width: " />
+                        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Width, Mode=TwoWay}" x:Name="txtWidth" 
                              TextAlignment="Right" PreviewTextInput="txtOnlyNumber_PreviewTextInput" 
                              TextChanged="txtHeightOrWidth_TextChanged" />
-                    <TextBlock Grid.Row="2" Grid.Column="2" Text=" cm" />
-                    <TextBlock Grid.Row="3" Grid.Column="0" Text="Height: " />
-                    <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Height, Mode=TwoWay}" 
+                        <TextBlock Grid.Row="2" Grid.Column="2" Text=" cm" />
+                        <TextBlock Grid.Row="3" Grid.Column="0" Text="Height: " />
+                        <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Height, Mode=TwoWay}" 
                              x:Name="txtHeight" TextAlignment="Right" 
                              PreviewTextInput="txtOnlyNumber_PreviewTextInput" 
                              TextChanged="txtHeightOrWidth_TextChanged" />
-                    <TextBlock Grid.Row="3" Grid.Column="2" Text=" cm" />
-                    <TextBlock Grid.Row="4" Grid.Column="0" Text="Distance btw Ref Points: " />
-                    <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding DistanceBetweenReferencePoints, Mode=TwoWay}" 
+                        <TextBlock Grid.Row="3" Grid.Column="2" Text=" cm" />
+                        <TextBlock Grid.Row="4" Grid.Column="0" Text="Distance between Ref Points: " />
+                        <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding DistanceBetweenReferencePoints, Mode=TwoWay}" 
                              x:Name="txtDistanceBetweenRefPoints" TextAlignment="Right" 
                              PreviewTextInput="txtOnlyNumber_PreviewTextInput" />
-                    <TextBlock Grid.Row="4" Grid.Column="2" Text=" cm" />
-                </Grid>
+                        <TextBlock Grid.Row="4" Grid.Column="2" Text=" cm" />
+                    </Grid>
 
-                <TextBlock Grid.Row="1" Text="Preview: " />
+                    <TextBlock Grid.Row="1" Text="Preview: " />
 
-                <Grid Grid.Row="2" x:Name="gridCanvas">
-                    <visualitems:EnvironmentShape x:Name="environmentShape" Selectable="False"
+                    <Grid Grid.Row="2" x:Name="gridCanvas">
+                        <visualitems:EnvironmentShape x:Name="environmentShape" Selectable="False"
                                                   EnvironmentHeight="{Binding Text, ElementName=txtHeight}"
                                                   EnvironmentWidth="{Binding Text, ElementName=txtWidth}"
                                                   DistanceBetweenReferencePoints="{Binding Text, ElementName=txtDistanceBetweenRefPoints}"/>
+                    </Grid>
                 </Grid>
 
-                <Grid Grid.Row="3" HorizontalAlignment="Right">
+                <Grid Grid.Row="1" HorizontalAlignment="Right">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="auto" />
@@ -88,6 +95,7 @@
                     <Button Grid.Column="1" x:Name="btnUpdate" Content="Update" Click="btnUpdate_Click"/>
                     <Button Grid.Column="2" x:Name="btnDelete" Content="Delete" Click="btnDelete_Click" />
                 </Grid>
+
             </Grid>
         </Grid>
     </Grid>
