--- a/IndoorPositioning.UI/Screens/GatewaysScreen.xaml
+++ b/IndoorPositioning.UI/Screens/GatewaysScreen.xaml
@@ -30,53 +30,57 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Grid Grid.Column="1" Margin="10">
+            <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0" x:Name="gridGatewayDetails">
+                <Grid Grid.Column="0" Margin="10">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Name: " />
-                    <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name, Mode=TwoWay}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="MAC Address: " />
-                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding MACAddress}" />
-                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Last Signal Time: " />
-                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding LastSignalTimestamp}" />
-
-                    <Grid Grid.Row="3" Grid.ColumnSpan="2">
+                    <Grid Grid.Row="0" x:Name="gridGatewayDetails">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="X-Axis: " />
-                        <ComboBox Grid.Column="1" x:Name="cbYaxis" 
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="Name: " />
+                        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name, Mode=TwoWay}" />
+                        <TextBlock Grid.Row="1" Grid.Column="0" Text="MAC Address: " />
+                        <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding MACAddress}" />
+                        <TextBlock Grid.Row="2" Grid.Column="0" Text="Last Signal Time: " />
+                        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding LastSignalTimestamp}" />
+
+                        <Grid Grid.Row="3" Grid.ColumnSpan="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="X-Axis: " />
+                            <ComboBox Grid.Column="1" x:Name="cbYaxis" 
                                   ItemsSource="{StaticResource Combobox_Gateway_Axis_Values}"
                                   SelectedValue="{Binding Yaxis, Mode=TwoWay}" />
-                        <TextBlock Grid.Column="2" Text="Y-Axis: " />
-                        <ComboBox Grid.Column="3" x:Name="cbXaxis" 
+                            <TextBlock Grid.Column="2" Text="Y-Axis: " />
+                            <ComboBox Grid.Column="3" x:Name="cbXaxis" 
                                   ItemsSource="{StaticResource Combobox_Gateway_Axis_Values}"
                                   SelectedValue="{Binding Xaxis, Mode=TwoWay}" />
+                        </Grid>
                     </Grid>
+
+                    <TextBlock Grid.Row="1" Text="Gateway Position: " />
+                    <Canvas Grid.Row="2" x:Name="canvasGatewayPosition" Background="LightGray" />
                 </Grid>
-
-                <TextBlock Grid.Row="1" Text="Gateway Position: " />
-                <Canvas Grid.Row="2" x:Name="canvasGatewayPosition" Background="LightGray" />
-
-                <Grid Grid.Row="3" HorizontalAlignment="Right">
+                <Grid Grid.Row="1" HorizontalAlignment="Right">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="auto" />
